# Tenant-Alert

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
WebApp/: 311Analysis.html  Visualizations.html  app.py
WebApp/templates/: main.html
api/app/: __init__.py  main.py
dagster_project/: __init__.py  definitions.py  jobs.py  schedules.py  workspace.yaml
dagster_project/assets/: __init__.py  dbt_assets.py  ingestion_assets.py
dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt/models/: schema.yml  sources.yml
docs/: bigquery_tables.md  data_sources.md  deployment.md  methodology.md  observability.md  secrets.md
infra/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
ingestion/census/: __init__.py  acs.py  cli.py
ingestion/common/: __init__.py  bigquery.py  socrata.py  storage.py
ingestion/crime/: __init__.py  cli.py  nypd_complaints.py
ingestion/geography/: __init__.py  cli.py  tract_nta.py
ingestion/mta/: __init__.py  alerts.py  cli.py
ingestion/nyc311/: __init__.py  cli.py  jobs.py
ingestion/pluto/: __init__.py  jobs.py
ml/bqml/: predict_resolution_time.sql  train_resolution_time.sql
realtime/: poller.py
requirements/: base.txt  dev.txt
scripts/: check_secrets.py  daily_crime_refresh.py  dev-api.ps1
tests/: test_census_acs_etl.py  test_config.py  test_geography_etl.py  test_nyc311_etl.py
web/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: crimeOverview.ts  (+3 more)
(+53 files in other folders)
